--- a/src/pages/data-display/data-display.html
+++ b/src/pages/data-display/data-display.html
@@ -9,7 +9,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>data-display</ion-title>
+    <ion-title>Overview</ion-title>
   </ion-navbar>
 
 </ion-header>
