--- a/src/pages/days/days.html
+++ b/src/pages/days/days.html
@@ -9,7 +9,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>days</ion-title>
+    <ion-title>Daily Log</ion-title>
   </ion-navbar>
 
 </ion-header>
