added user info for profile page display

--- a/src/pages/days/days.html
+++ b/src/pages/days/days.html
@@ -16,5 +16,23 @@
 
 
 <ion-content padding>
+  Data for 1/7/2018
+
+  <ion-item>
+    <ion-label>Mood</ion-label>
+    <ion-select [(ngModel)]="gender">
+      <ion-option value="no">No Mood</ion-option>
+      <ion-option value="angry">Angry</ion-option>
+    </ion-select>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Gender</ion-label>
+    <ion-select [(ngModel)]="gender">
+      <ion-option value="f">Female</ion-option>
+      <ion-option value="m">Male</ion-option>
+    </ion-select>
+  </ion-item>
+
 
 </ion-content>
