--- a/src/pages/days/days.html
+++ b/src/pages/days/days.html
@@ -85,7 +85,8 @@
     <ion-input type="text" value=""></ion-input>
   </ion-item>
 
-
+  <button ion-button>Edit</button>
+  <button ion-button>Save</button>
 
 
 </ion-content>
