made style updates to profile page

--- a/src/pages/days/days.html
+++ b/src/pages/days/days.html
@@ -64,7 +64,7 @@
   </ion-item>
 
   <ion-item>
-    <ion-label fixed>Protiens</ion-label>
+    <ion-label fixed>Proteins</ion-label>
     <ion-input type="text" value=""></ion-input>
   </ion-item>
   
