--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -29,7 +29,7 @@
 
 
     <ion-item>
-      <ion-label>Birthday</ion-label>
+      <ion-label floating>Birthday</ion-label>
       <ion-input type="text" [(ngModel)]="exampleUserOne.birthdate"></ion-input>
     </ion-item>
 
