--- a/src/pages/days/days.html
+++ b/src/pages/days/days.html
@@ -86,7 +86,7 @@
   </ion-item>
 
   <button ion-button>Edit</button>
-  <button ion-button>Save</button>
+  <button ion-button (click)='goHome()'>Save</button>
 
 
 </ion-content>
