--- a/src/pages/days/days.html
+++ b/src/pages/days/days.html
@@ -16,9 +16,11 @@
 
 
 <ion-content padding>
-  Data for 1/7/2018
-  <br>
-  Menstrual Cycle
+  <h3 text-center>Data for 1/7/2018</h3>
+
+  <ion-list>
+
+  <ion-list-header>Menstrual Cycle</ion-list-header>
   <ion-item>
     <ion-label>Bleeding</ion-label>
     <ion-toggle checked="false"></ion-toggle>
@@ -57,7 +59,7 @@
     </ion-select>
   </ion-item>
 
-  Nutrition Macros %
+  <ion-list-header>Nutrition Macros %</ion-list-header>
 
   <ion-item>
     <ion-label fixed>Carbs</ion-label>
@@ -74,8 +76,7 @@
     <ion-input type="text" value=""></ion-input>
   </ion-item>
   
-
-  Exercise
+  <ion-list-header>Exercise</ion-list-header>
 
   <ion-item>
     <ion-label>Type</ion-label>
@@ -90,6 +91,8 @@
     <ion-label fixed>Minutes</ion-label>
     <ion-input type="text" value=""></ion-input>
   </ion-item>
+
+</ion-list>
 
   <button ion-button>Edit</button>
   <button ion-button (click)='goHome()'>Save</button>
