adds in 100 day graph

--- a/src/pages/data-display/data-display.html
+++ b/src/pages/data-display/data-display.html
@@ -24,7 +24,7 @@
     <ion-card-content>
         <!-- <canvas #lineCanvas30></canvas> -->
       <canvas [hidden]='!is100Days' #lineCanvas30></canvas>
-      <p [hidden]='is100Days'>100 Day</p>
+      <canvas [hidden]='is100Days' #lineCanvas100></canvas>
     </ion-card-content>
   </ion-card>
 
