Minor changes for demo

--- a/src/pages/data-display/data-display.html
+++ b/src/pages/data-display/data-display.html
@@ -16,6 +16,7 @@
 
 
 <ion-content>
+  <h3 text-center>{{headerText}}</h3>
   <ion-fab top right edge>
       <button ion-fab (click)='toggleGraphView()'>{{buttonText}}</button>
   </ion-fab>
