--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -10,7 +10,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>profile</ion-title>
+    <ion-title>Profile</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -34,11 +34,11 @@
     </ion-item>
 
     <ion-item>
-      <ion-label floating>Height Feet </ion-label>
+      <ion-label floating>Height (feet) </ion-label>
       <ion-input type="number" value="" [(ngModel)]="exampleUserOne.height"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label floating>Height Inches </ion-label>
+      <ion-label floating>Height (inches) </ion-label>
       <ion-input type="number" value="" [(ngModel)]="exampleUserOne.inches"></ion-input>
     </ion-item>
 
